Fix linewrap on long afk names

--- a/www/assets/css/ytsync.css
+++ b/www/assets/css/ytsync.css
@@ -6,6 +6,10 @@ body {
     background-color: #f5f5f5;
 }
 
+.userlist_item {
+    white-space: nowrap;
+}
+
 .wrapper {
     min-height: 100%;
     height: auto !important;
